# simple_gltf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker/: test.Dockerfile
simple_gltf/: __init__.py
tests/: test_code_generated_gltf.py
