[tool.poetry]
name = "simple-gltf"
version = "0.1.0"
description = "A pythonic interface for parsing gltf/glb files based on pygltflib. "
authors = ["TurtleIzzy <agnimon@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/turtleizzy/simple_gltf"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
pygltflib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
